fix comment form avatar alignment

--- a/src/components/Avatar/Avatar.scss
+++ b/src/components/Avatar/Avatar.scss
@@ -21,6 +21,10 @@
 		}
 	}
 
+	&--comment {
+		margin-top: 25px;
+	}
+
 	&--tablet {
 		display: none;
 
